UI changes & other  small fixes

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -4,6 +4,9 @@
 @import "./navbar.scss";
 @import "./content.scss";
 @import "./audioplayer.scss";
+@import "./profile.scss";
+
+@import url("https://fonts.googleapis.com/css2?family=Assistant:wght@400;700;800&family=Radio+Canada:wght@400;500;600;700&display=swap");
 
 body {
   overflow-y: hidden;
