--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,5 +1,5 @@
 $sidebar-width: 250px;
 $navbar-height: 64px;
 $color-unseen: #9c9c9c;
-$profile-width: 450px;
+$inner-form-width: 450px;
 $audioplayer-bg-color: white;
