My dumb ass forgot bottom player, fixed it

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -3,3 +3,4 @@ $navbar-height: 64px;
 $color-unseen: #9c9c9c;
 $inner-form-width: 450px;
 $audioplayer-bg-color: white;
+$bottom-player-height: 100px;
