Numerous UI fixes

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,6 +1,9 @@
-$sidebar-width: 250px;
-$navbar-height: 64px;
-$color-unseen: #9c9c9c;
-$inner-form-width: 450px;
-$audioplayer-bg-color: white;
-$bottom-player-height: 100px;
+$sf-sidebar-width: 250px;
+$sf-navbar-height: 64px;
+$sf-color-unseen: #9c9c9c;
+$sf-inner-form-width: 450px;
+$sf-audioplayer-bg-color: white;
+$sf-bottom-player-height: 100px;
+$sf-primary-color: #212529;
+// $sf-nav-active-link-color: rgb(255, 0, 0);
+$sf-nav-link-color: #686f74;
