--- a/src/styles/bootstrap-override.scss
+++ b/src/styles/bootstrap-override.scss
@@ -2,13 +2,17 @@ $font-family-base: "Radio Canada", sans-serif;
 $headings-font-weight: 700;
 
 $theme-colors: (
-  "primary": #212529,
+  "primary": $sf-primary-color,
 );
 
-$nav-link-color: #212529;
+$nav-link-color: $sf-nav-link-color;
+$nav-link-hover-color: $sf-primary-color;
 
 $accordion-button-padding-y: 0.5rem;
 $accordion-button-padding-x: 0.5rem;
+
+$component-active-bg: $sf-primary-color;
+
 
 // $accordion-button-icon: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' width='1' height='1'/>");
 // $accordion-button-active-icon: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' width='1' height='1'/>");
