--- a/src/styles/navbar.scss
+++ b/src/styles/navbar.scss
@@ -1,4 +1,4 @@
 .navbar-brand {
-  width: calc($sidebar-width - $spacer * 0.75);
+  width: calc($sf-sidebar-width - $spacer * 0.75);
   // width: $sidebar-width;
 }
