Implement bottom player UI

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -4,6 +4,7 @@ $sf-color-unseen: #9c9c9c;
 $sf-inner-form-width: 450px;
 $sf-audioplayer-bg-color: white;
 $sf-bottom-player-height: 100px;
-$sf-primary-color: #212529;
+$sf-primary-color: #2b2a30;
 // $sf-nav-active-link-color: rgb(255, 0, 0);
 $sf-nav-link-color: #686f74;
+$sf-seekbar-color: #9c9c9c;
