--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -6,5 +6,5 @@ $sf-audioplayer-bg-color: white;
 $sf-bottom-player-height: 100px;
 $sf-primary-color: #2b2a30;
 // $sf-nav-active-link-color: rgb(255, 0, 0);
-$sf-nav-link-color: #686f74;
-$sf-seekbar-color: #9c9c9c;
+$sf-nav-link-color: #4c5053;
+$sf-seekbar-color: #dadada;
