Implement player and working seekbar

--- a/src/styles/bootstrap-override.scss
+++ b/src/styles/bootstrap-override.scss
@@ -11,5 +11,6 @@ $component-active-bg: $sf-primary-color;
 $link-color: $sf-primary-color;
 $primary: $sf-primary-color;
 // $link-hover-color: $sf-nav-link-color;
+$btn-white-space: nowrap;
 
 @import "bootstrap/scss/bootstrap";
