--- a/src/styles/bottom-player.scss
+++ b/src/styles/bottom-player.scss
@@ -2,16 +2,27 @@
   height: $sf-bottom-player-height;
 }
 
-audio::-webkit-media-controls-panel {
-  background-color: $sf-audioplayer-bg-color;
-}
-
 .player-seekbar {
-  height: 4px;
+  height: 6px;
   width: 100%;
   background-color: $sf-seekbar-color;
+  background-image: linear-gradient($sf-primary-color, $sf-primary-color);
+  background-size: 0% 100%;
+  background-repeat: no-repeat;
 }
 
 .player-volume-bar {
   background-color: $sf-seekbar-color;
+}
+
+.player-volume-control {
+  transition: opacity 0.15s;
+}
+
+.disable-select {
+  user-select: none; /* supported by Chrome and Opera */
+ -webkit-user-select: none; /* Safari */
+ -khtml-user-select: none; /* Konqueror HTML */
+ -moz-user-select: none; /* Firefox */
+ -ms-user-select: none; /* Internet Explorer/Edge */
 }
