working persistent seekbar/volume bar

--- a/src/styles/bootstrap-override.scss
+++ b/src/styles/bootstrap-override.scss
@@ -13,4 +13,6 @@ $primary: $sf-primary-color;
 // $link-hover-color: $sf-nav-link-color;
 $btn-white-space: nowrap;
 
+$enable-negative-margins: true;
+
 @import "bootstrap/scss/bootstrap";
