--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -8,6 +8,7 @@
 @import "./sign-in.scss";
 @import "./releases-sort-search.scss";
 @import "./bottom-player.scss";
+@import "./release.scss";
 
 @import url("https://fonts.googleapis.com/css2?family=Assistant:wght@400;700;800&family=Radio+Canada:wght@400;500;600;700&display=swap");
 
