--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -9,6 +9,7 @@
 @import "./releases-sort-search.scss";
 @import "./bottom-player.scss";
 @import "./release.scss";
+@import "./watch.scss";
 
 @import url("https://fonts.googleapis.com/css2?family=Assistant:wght@400;700;800&family=Radio+Canada:wght@400;500;600;700&display=swap");
 
