Custom scrollbar & working "Get on Bandcamp" button

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,6 +1,6 @@
 $sf-sidebar-width: 250px;
 $sf-navbar-height: 64px;
-$sf-color-unseen: #9c9c9c;
+$sf-color-unseen: #e9eaf1;
 $sf-inner-form-width: 450px;
 $sf-audioplayer-bg-color: white;
 $sf-bottom-player-height: 90px;
